--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
 <head>
-    <meta property="al:ios:url" content="applinks://docs" />
-    <meta property="al:ios:app_store_id" content="12345" />
-    <meta property="al:ios:app_name" content="App Links" />
-    <meta property="al:android:url" content="mbillsdemo://www.mbills.si/dl/?type=1&token=767608" />
-    <meta property="al:android:app_name" content="App Links" />
-    <meta property="al:android:package" content="com.halcom.mbills.slo" />
-    <meta property="al:web:url"
-          content="http://applinks.org/documentation" />
+  <script src="browser-deeplink.js" type="text/javascript"></script>
+
+  <script>
+    deeplink.setup({
+        iOS: {
+            appName: "myapp",
+            appId: "123456789",
+        },
+        android: {
+            appId: "com.halcom.mbills.slo"
+        }
+    });
+
+    window.onload = function() {
+        deeplink.open("mbillsdemo://www.mbills.si/dl/?type=1&token=767608");
+    }
+  </script>
 </head>
 <body>
   Hello, world!
