Try with window

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     });
 
     window.onload = function() {
-        deeplink.open("mbillsdemo://www.mbills.si/dl/?type=1&token=767608");
+        window.open("mbillsdemo://www.mbills.si/dl/?type=1&token=767608");
     }
   </script>
 </head>
