--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     });
 
     window.onload = function() {
-      deeplink.open('mbillsdemo://www.mbills.si/dl/?type='+type+'&token='+token+');
+      deeplink.open('mbillsdemo://www.mbills.si/dl/?type='+type+'&token='+token);
     }
 
     document.getElementById('form').value = type;
