--- a/index.html
+++ b/index.html
@@ -4,41 +4,15 @@
 	<script src="browser-deeplink.js" type="text/javascript"></script>
 
 	<script>
-
-    var qs = (function(a) {
-    if (a == "") return {};
-    var b = {};
-    for (var i = 0; i < a.length; ++i)
-    {
-        var p=a[i].split('=', 2);
-        if (p.length == 1)
-            b[p[0]] = "";
-        else
-            b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
-    }
-    return b;
-    })(window.location.search.substr(1).split('&'));
-
-    var type = qs['type'];
-    var token = qs['token'];
-
     deeplink.setup({
-        iOS: {
-            appName: "myapp",
-            appId: "123456789",
-        },
-        android: {
-            appId: "com.halcom.mbills.slo"
-        }
+      android: {
+          appId: "com.halcom.mbills.slo"
+      }
     });
 
     window.onload = function() {
-      deeplink.open('mbillsdemo://www.mbills.si/dl/?type='+type+'&token='+token);
+      deeplink.open('mbillsdemo://www.mbills.si/dl/?type=1&token=448478');
     }
-
-    document.getElementById('form').value = type;
-    document.getElementById('token').value = token;    
-    
   </script>
 </head>
 
