--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <html>
-
 <head>
-	<script src="browser-deeplink.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="browser-deeplink.js" type="text/javascript"></script>
 
-	<script>
-    deeplink.setup({
-      android: {
-          appId: "com.halcom.mbills.slo"
-      }
-    });
+<script>
+  deeplink.setup({
+    android: {
+        appId: "com.halcom.mbills.slo"
+    },
+    fallback: false // This way Google Play should not open
+  });
 
-    window.onload = function() {
-      var tokenUrl = location.search.split('token=')[1];
-      deeplink.open('mbillsdemo://www.mbills.si/dl/?type=1&token='+token);
-    }
+  window.onload = function() {
+    var token = location.search.split('token=')[1];
 
+    console.log(token);
 
-  </script>
+    deeplink.open('mbillsdemo://www.mbills.si/dl/?type=1&token=' + token);
+
+    $("#token").text(token);
+  }
+</script>
 </head>
-
 <body>
-	<form id="form" action="mbillsdemo://www.mbills.si/dl/" target="_blank">
-		<input type="hidden" id="type" name="type" value="1" />
-		<input type="hidden" id="token" name="token" value="830025" />
-		<input type="submit" value "Open App" />
-	</form>
+  <div id="token"></div>
 </body>
-
 </html>
