--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
+<script src="jquery.min.js"></script>
 <script src="browser-deeplink.js" type="text/javascript"></script>
 
 <script>
@@ -22,7 +23,22 @@
   }
 </script>
 </head>
-<body>
+<body class="active">
+  <br>
+  <br>
+
+  <div class="sk-folding-cube">
+    <div class="sk-cube1 sk-cube"></div>
+    <div class="sk-cube2 sk-cube"></div>
+    <div class="sk-cube4 sk-cube"></div>
+    <div class="sk-cube3 sk-cube"></div>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
   <div id="token"></div>
+
 </body>
 </html>
