--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<script src="jquery.min.js"></script>
-<script src="browser-deeplink.js" type="text/javascript"></script>
-
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<script src="src/jquery.min.js"></script>
+<script src="src/browser-deeplink.js" type="text/javascript"></script>
 <script>
   deeplink.setup({
     android: {
